Fixed scrolling banner overflow error

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -306,6 +306,7 @@ table {
 }
 td {
     padding: 0.5rem;
+    width: 15rem;
 }
 .btn-th {
     display: table-cell;
@@ -318,6 +319,10 @@ td {
     height: 50vh;
 }
 /* SIMILAR */
+/* FORMSIMILAR */
+#formSimilar {
+    max-width: 37rem;
+}
 /* TABLES */
 .div-tables {
     display: flex;
@@ -327,14 +332,16 @@ table {
 }
 thead {
     border: 1px solid;
+    height: 8rem;
 }
-small {
-    font-size: 10px;
+th small, td small {
+    font-size: 1rem;
     display: block;
     margin: 0.5rem;
+    margin-bottom: 0;
 }
 th {
-    padding: 1rem;
+    padding: 0.5rem;
 }
 th, td {
     margin: 0 auto;
@@ -356,6 +363,7 @@ th, td {
 .horizontal-scrolling-banner {
     overflow: hidden;
     position: absolute;
+    width: 100vw;
     bottom: 0;
 }
 
